--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 #ignore pod
 Pods/
+*.xcuserstate
+project.xcworkspace
+xcuserdata
+UserInterfaceState.xcuserstate
+project.xcworkspace/
+xcuserdata/
+UserInterface.xcuserstate
